certification/scheduler/deemonset-definition.yml
apiVersion: apps/v1 
kind: DaemonSet
metadata:
  name: monitoring-daemon
spec:
  selector:
    matchLabels:
      app: monitoring-daemon
  template:
    metadata:
      labels:
        app: monitoring-daemon
    spec:
      containers:
        - name: monitoring-agent
          image: monitoring-agent
