certification/scheduler/manual-pod-scheduling.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  -  image: nginx
     name: nginx
  nodeName: node01    # used for manually scheduling pod to specific node
