certification/scheduler/my-scheduler-pod-def.yml
apiVersion: v1 
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
  schedulerName: my-custom-scheduler
