certification/scheduler/node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-Pod
spec:
  containers:
    - name: data-processor
      image: data-processor
  nodeSelector:
    size: Large


# Above size: Large are the labels of the node
