certification/scheduler/validating-webhook-cust-admission.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "pod-policy.example.com"
webhooks:
  - name: "pod-policy.example.com"
    clientConfig:
      # url: "https://external-server.example.com"
      service:
        name: "webhook-service"
        namespace: "webhook-namespace"
      caBundle: "cadsdsd..sda..dsa"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: "None"
